# advent-of-code

./: .gitmodules  CMakeLists.txt  LICENSE
advent2020/: CMakeLists.txt  PassportProcessing.cpp  expenses.cpp  expenses.h  passportProcessing.h  tobogganPasswords.cpp  tobogganPasswords.h  tobogganTrajectory.cpp  tobogganTrajectory.h
parsing/: CMakeLists.txt  parsing.h
src/: 2020.cpp  2020.h  CMakeLists.txt  main.cpp
test/: AutoRun.cpp  CMakeLists.txt  TestExpenses.cpp  TestPassportProcessing.cpp  TestTobogganPasswords.cpp  TestTobogganTrajectory.cpp
